unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/litify_ext__Companion_Cloning__mdt.object-meta.xml
<CustomObject>
    <label>Companion Cloning</label>
    <pluralLabel>Companions Cloning</pluralLabel>
</CustomObject>