unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Clear_Fields__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Clear_Fields__c</fullName>
    <label>Clear Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>