unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Companion_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Companion_Type__c</fullName>
    <label>Companion Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake</label>
            </value>
            <value>
                <fullName>Matter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>