unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Exclude_from_comparison_Companions__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Exclude_from_comparison_Companions__c</fullName>
    <label>Exclude from comparison(Companions)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>