unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>