unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Name_Field__c</fullName>
    <description>This Field Used to Define which field from record will be used as a name field. Field will be displayed in name column on Companion Component.</description>
    <inlineHelpText>This Field Used to Define which field from record will be used as a name field. Field will be displayed in name column on Companion Component.</inlineHelpText>
    <label>Name Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>