unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Parent_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Parent_Field_Api_Name__c</fullName>
    <label>Parent Field Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>