unpackaged/main/default/objects/litify_ext__Companion_Cloning__mdt/fields/litify_ext__Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Where_Condition__c</fullName>
    <label>Where Condition</label>
    <type>TextArea</type>
</CustomField>